--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,19 @@
         android:theme="@style/Theme.MyAndroidApplication"
         tools:targetApi="31">
         <activity
-            android:name=".EditFeedbackActivity"
+            android:name=".activity.EditFeedbackActivity"
             android:exported="false" />
         <activity
-            android:name=".AddFeedBackActivity"
+            android:name=".activity.AddFeedBackActivity"
             android:exported="false" />
         <activity
-            android:name=".FeedbackDashboardActivity"
+            android:name=".activity.FeedbackDashboardActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".activity.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
